# deker-tools

./: .coveragerc  .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  RELEASE-VERSION  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini  version.py
.github/workflows/: github-actions.yml  on_push.yml  on_release.yml  on_test_release.yml
deker_tools/: __init__.py  data.py  log.py  path.py  slices.py  time.py
docs/: conf.py  index.rst
docs/source/api/: data.rst  modules.rst  path.rst  slices.rst  time.rst
tests/: test_data.py  test_log.py  test_path.py  test_slices.py
