# https://black.readthedocs.io/en/stable/
[tool.black]
line-length = 120
target-version = ['py37', 'py38', 'py39']
#target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/foo.py  # exclude a file named foo.py in the root of the project (in addition to the defaults)
'''

# https://mypy.readthedocs.io/en/stable/
# https://pypi.org/project/mypy-extensions/
[tool.mypy]
python_version = '3.8'
ignore_missing_imports = true
scripts_are_modules = true
allow_redefinition = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_no_return = false
show_error_context = true
show_column_numbers = true
show_error_codes = true

color_output = false
pretty = true
exclude = [
    '^setup\.py$',
    '^tmp\.py$',
    '^venv/',
    '^test+\.py$',
    '^conftest\.py$',
    '^tests/'
]

# https://pycqa.github.io/isort/
[tool.isort]
py_version = 38
sections = ['FUTURE', 'STDLIB', 'THIRDPARTY', 'FIRSTPARTY', 'LOCALFOLDER']
known_local_folder = ['deker_tools', ]
profile = 'black'
atomic = true
include_trailing_comma = true
line_length = 120
lines_after_imports = 2
lines_between_types = 1
multi_line_output = 3
extend_skip = ['.md', '.json']

[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]

[project]
name = "deker_tools"
requires-python = ">=3.9"
dynamic = ["version", "readme", "dependencies"]
authors = [
    {name = "OpenWeather", email = "info@openweathermap.org"},
]
maintainers = [
        {name = "OpenWeather", email = "info@openweathermap.org"},
]
description = "Interactive shell for Deker"
license = {text = "GPL-3.0-only"}

classifiers = [
        "Development Status :: 4 - Beta",
        "Intended Audience :: Developers",
        "Intended Audience :: Information Technology",
        "Intended Audience :: Science/Research",
        "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
        "Topic :: Software Development :: Libraries :: Python Modules",
        "Operating System :: Unix",
        "Operating System :: POSIX :: Linux",
        "Operating System :: MacOS :: MacOS X",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
]
[project.urls]
'Homepage' = 'https://deker.io/'
'Documentation' = 'https://docs.deker.io/'
'Repository' = 'https://github.com/openweathermap/deker-tools'

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type='text/markdown'}
dependencies = {file = ["requirements.txt"]}

[tool.setuptools]
packages = ["deker_tools"]
license-files=["LICENSE"]
[tool.setuptools_scm]
